<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stoplovingnever.nest.activity.LoginActivity"
    android:fitsSystemWindows="true">

    <!--
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>
        </android.support.design.widget.AppBarLayout>

    -->
    <LinearLayout
        android:id="@+id/layout_sms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/space20"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Your phone number"
                android:layout_centerHorizontal="true"
                style="@style/h2"
                />
            <TextView
                android:id="@+id/tv_country"
                android:layout_below="@id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="India (+91)"
                android:onClick="tv_country"
                android:layout_marginTop="@dimen/space20"
                style="@style/EditText"
                />



            <EditText
                android:id="@+id/no"
                android:layout_below="@id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:inputType="phone"
                style="@style/EditText"
                android:focusable="true"
                />

            <EditText
                android:id="@+id/name"
                android:layout_below="@id/no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Name"
                android:inputType="textCapWords"
                style="@style/EditText"
                android:focusable="true"
                />

            <TextView
                android:id="@+id/tnw"
                android:layout_below="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Love should remain Untold !"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/spaceLR"
                android:paddingRight="@dimen/spaceLR"
                android:paddingTop="20dp"
                style="@style/h3Info"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:id="@+id/tv_info_confirm"
                android:layout_below="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/spaceLR"
                android:paddingRight="@dimen/spaceLR"
                />
            <!--
                       <TextView
                           android:id="@+id/tv_info_name"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="Enter Your Name"
                           android:layout_below="@id/tv_info_confirm"
                           android:layout_centerHorizontal="true"
                           style="@style/h2"
                           android:paddingTop="@dimen/space20"
                           />
                           -->


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Click to Fall in Love ..."
                android:onClick="loginclk"
                style="@style/ButtonPink"
                />


        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/space20"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/im"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_launcher"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/otpt1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/msg_sit_back"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_below="@id/im"
                />


            <TextView
                android:id="@+id/otpt2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/msg_manual_otp"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/otpt1"
                />

            <EditText
                android:id="@+id/conf_code"
                android:layout_below="@id/otpt2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:hint="@string/lbl_enter_otp"
                android:textColorHint="@color/colorPrimary"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                />

            <LinearLayout
                android:id="@+id/layout_edit_mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_below="@+id/conf_code"
                >

                <TextView
                    android:id="@+id/txt_edit_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <com.meg7.widget.CircleImageView
                    android:id="@+id/btn_edit_mobile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:src="@drawable/edit_no"
                    android:onClick="no_change" />
            </LinearLayout>

            <!--
            <TextView
                android:id="@+id/tv_info_confirm"
                android:layout_below="@id/no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(Please confirm your country code and enter your phone number)"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/spaceLR"
                android:paddingRight="@dimen/spaceLR"
                android:paddingTop="@dimen/space20"
                android:paddingBottom="@dimen/space20"
                style="@style/h3Info"
                android:background="@drawable/bg_top_grey"
                />

            <ImageView
                android:id="@+id/tv_info_confirm_n"
                android:layout_below="@id/conf_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/spaceLR"
                android:paddingRight="@dimen/spaceLR"
                />

                       <TextView
                           android:id="@+id/tv_info_name"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="Enter Your Name"
                           android:layout_below="@id/tv_info_confirm"
                           android:layout_centerHorizontal="true"
                           style="@style/h2"
                           android:paddingTop="@dimen/space20"
                           />
                           -->



            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Click to Fall in Love ..."
                android:onClick="b1"
                style="@style/ButtonPink"
                />



        </RelativeLayout>
    </LinearLayout>


    <!--


            <LinearLayout
                android:id="@+id/layout_otp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="100dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/msg_sit_back"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/msg_manual_otp"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/conf_code"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:hint="@string/lbl_enter_otp"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/grid_elemt_style"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/lbl_submit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    android:onClick="b1"/>

            </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_edit_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/txt_edit_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <ImageButton
                android:id="@+id/btn_edit_mobile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:src="@drawable/ic_edit_mobile"
                android:onClick="no_change" />
        </LinearLayout>
    -->


</LinearLayout>